# natural_syntax

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
natural_syntax_ls/: CHANGELOG.md  Cargo.toml
natural_syntax_ls/src/: document_registry.rs  lib.rs  main.rs  semantic_tokens.rs  tests.rs  token_mapping.rs
natural_syntax_ls/src/document_registry/: two.rs
natural_syntax_ls/src/snapshots/: natural_syntax_ls__tests__convert_tokens.snap  natural_syntax_ls__tests__extend_default.snap  natural_syntax_ls__tests__token_modifiers.snap  natural_syntax_ls__tests__token_types.snap
src/: lib.rs  tests.rs
src/snapshots/: natural_syntax__tests__markdown_pos.snap  natural_syntax__tests__paragraph_pos.snap
