[package]
description = "Natural language syntax highlighting."
edition = "2021"
license = "MIT"
name = "natural_syntax"
version = "0.0.0"
publish = false

[dependencies]
rust-bert = "0.22"
serde = { version = "1", features = ["derive"], optional = true}
thiserror = "1.0.61"

[dev-dependencies]
insta = "1.39"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compile snapshot testing libraries with optimizations.
[profile.dev.package]
insta = { opt-level = 3 }
similar = { opt-level = 3 }

[features]
default = ["rust-bert-download-libtorch", "serde"]
rust-bert-download-libtorch = ["rust-bert/download-libtorch"]
