[workspace]
members = [".", "natural_syntax_ls"]

[workspace.package]
description = "Natural language syntax highlighting."
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SichangHe/natural_syntax"

[workspace.dependencies]
anyhow = "1"
insta = "1.39"
natural_syntax = { version = "0.0", path = "." }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compile snapshot testing libraries with optimizations.
[profile.dev.package]
insta = { opt-level = 3 }
similar = { opt-level = 3 }

[profile.release]
lto = true

[package]
description.workspace = true
edition.workspace = true
license.workspace = true
name = "natural_syntax"
readme.workspace = true
repository.workspace = true
version = "0.0.1"

[dependencies]
num-derive = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
rust-bert = "0.22"
serde = { workspace = true, optional = true }
thiserror = "1.0.61"

[dev-dependencies]
insta.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
# FIXME: Do not download libtorch, figure out how to use the system libtorch.
default = ["num", "rust-bert-download-libtorch", "serde"]
num = ["dep:num-derive", "dep:num-traits"]
rust-bert-download-libtorch = ["rust-bert/download-libtorch"]
serde = ["dep:serde"]
