[package]
name = "natural_syntax_ls"
version = "0.0.0"
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "natural-syntax-ls"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
drop_this = "0.0"
natural_syntax.workspace = true
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
ropey = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "sync",
] }
tokio_gen_server = "0.5"
tower-lsp = "0.20"
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2"

[dev-dependencies]
insta.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
